Improve QR encoding performance
- inline mask pixel lookup to reduce per-bit overhead
- rewrite add_data_to_matrix with a simpler zig-zag fill and drop get_next_free_positions
- keeps behavior identical while speeding up matrix generation
- Basic unit and black-box tests for core QR routines; run with `make test`.
- Lightweight profiler for spotting hotspots in typical encodes via `make profile`.
- Bitwise XOR uses a precomputed 256x256 lookup table to stay fast and portable across Lua versions.
- README refreshed with contributor-friendly development notes.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           fetch-depth: 0
       - name: Setup ‘lua’
-        uses: leafo/gh-actions-lua@v9
+        uses: leafo/gh-actions-lua@v12
         with:
           luaVersion: ${{ matrix.luaVersion }}
-          buildCache: true
+          buildCache: false
       - name: Test
         run: |
           lua qrtest.lua
